--- a/Offene_Fragen_und_Aufgaben.tex
+++ b/Offene_Fragen_und_Aufgaben.tex
@@ -42,6 +42,7 @@
   \item Wie funktioniert der Keller im Bezug auf die Elimation der linksrekursion? Script Seite 174
   \item Wie testet man auf LL-Bedingung? siehe hier \ref{ref}
   \item Wie geh ich mit Mehrdeutigkeit um im Shift Reduce Kontext?
+  \item Wie löse ich den Reduce/Reduce Konflikt?
   \begin{itemize}
     \item []  Ich antworte ihr auf die Frage  
   \end{itemize}
